--- a/yaml/harvester-ingress.yaml
+++ b/yaml/harvester-ingress.yaml
@@ -3,14 +3,17 @@ apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
   name: harvester-ingress
+  namespace: harvester-system
   annotations:
     kubernetes.io/ingress.class: "traefik"
 spec:
+  tls:
+  - secretName: harvester-tls-cert
   rules:
-  - http:
+  - host: harvester.ingress.example.com
+    http:
       paths:
       - path: /
         backend:
           serviceName: harvester
-          servicePort: 8443
-    host: harvester.ingress.example.com
+          servicePort: 8080
